# sentient

./: .gitignore  CMakeLists.txt  Makefile
.cache/clangd/index/: Core.cpp.2DF60AAD5D51A4C2.idx  main.cpp.EA347652A52F75D0.idx
application/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/glad/include/glad/: gl.h
engine/glad/src/: gl.c
engine/include/CogniEngine/: Core.hpp
engine/include/CogniLogger/: Logger.hpp
engine/src/: Core.cpp  Logger.cpp
